css/bookblock.css
.bb-bookblock {
	width: 135vh;
	height: 90vh;
	position: relative;
	z-index: 100;
	margin-left: auto;
	margin-right: auto;
	margin-top: 5vh;
	-webkit-perspective: 2000px;
	perspective: 2000px;
}

.bb-page {
	position: absolute;
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
	-webkit-transition-property: -webkit-transform;
	transition-property: transform;
}

.bb-item img {
	width: 100%;
	height: auto;
}

.bb-page img {
	width: 100%;
	height: auto;
}

.bb-vertical .bb-page {
	width: 50%;
	height: 100%;
	left: 50%;
	-webkit-transform-origin: left center;
	transform-origin: left center;
}

.bb-page>div,
.bb-outer,
.bb-content,
.bb-inner {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

.bb-vertical .bb-content {
	width: 200%;
}

.bb-horizontal .bb-content {
	height: 200%;
}

.bb-page>div {
	width: 100%;
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
}

.bb-vertical .bb-back {
	-webkit-transform: rotateY(-180deg);
	transform: rotateY(-180deg);
}

.bb-horizontal .bb-back {
	-webkit-transform: rotateX(-180deg);
	transform: rotateX(-180deg);
}

.bb-outer {
	width: 100%;
	overflow: hidden;
	z-index: 999;
}

.bb-overlay,
.bb-flipoverlay {
	background-color: rgba(0, 0, 0, 0.7);
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	opacity: 0;
}

.bb-flipoverlay {
	background-color: rgba(0, 0, 0, 0.2);
}

.bb-bookblock.bb-vertical>div.bb-page:first-child,
.bb-bookblock.bb-vertical>div.bb-page:first-child .bb-back {
	-webkit-transform: rotateY(180deg);
	transform: rotateY(180deg);
}

.bb-bookblock.bb-horizontal>div.bb-page:first-child,
.bb-bookblock.bb-horizontal>div.bb-page:first-child .bb-back {
	-webkit-transform: rotateX(180deg);
	transform: rotateX(180deg);
}

/* Content display */
.bb-content {
	background-color: #ccccff;
}

.bb-vertical .bb-front .bb-content {
	left: -100%;
}

.bb-horizontal .bb-front .bb-content {
	top: -100%;
}

/* Flipping classes */
.bb-vertical .bb-flip-next,
.bb-vertical .bb-flip-initial {
	-webkit-transform: rotateY(-180deg);
	transform: rotateY(-180deg);
}

.bb-vertical .bb-flip-prev {
	-webkit-transform: rotateY(0deg);
	transform: rotateY(0deg);
}

.bb-horizontal .bb-flip-next,
.bb-horizontal .bb-flip-initial {
	-webkit-transform: rotateX(180deg);
	transform: rotateX(180deg);
}

.bb-horizontal .bb-flip-prev {
	-webkit-transform: rotateX(0deg);
	transform: rotateX(0deg);
}

.bb-vertical .bb-flip-next-end {
	-webkit-transform: rotateY(-15deg);
	transform: rotateY(-15deg);
}

.bb-vertical .bb-flip-prev-end {
	-webkit-transform: rotateY(-165deg);
	transform: rotateY(-165deg);
}

.bb-horizontal .bb-flip-next-end {
	-webkit-transform: rotateX(15deg);
	transform: rotateX(15deg);
}

.bb-horizontal .bb-flip-prev-end {
	-webkit-transform: rotateX(165deg);
	transform: rotateX(165deg);
}

.bb-item {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	display: none;
}


#quote1 {
	background-color: #ccccff;
}

#quote2 {
	background-color: #94c6ad;
}

#quote3 {
	background-color: #011f60;
}

#quote4 {
	background-color: #f49dc0;
}

#quote5 {
	background-color: #fed4d1;
}

#quote6 {
	background-color: #000000;
}

#quote7 {
	background-color: #2b1c47;
}

#quote8 {
	background-color: #c4deeb;
}

#quote9 {
	background-color: #2a5545;
}

#quote10 {
	background-color: #b8b9c4;
}

#quote11 {
	background-color: #000000;
}

.white {
	color:white !important;
}
/* No JS */
.no-js .bb-bookblock,
.no-js ul.bb-custom-grid li {
	width: auto;
	height: auto;
}

.no-js .bb-item {
	display: block;
	position: relative;
}

#helen {
	position: absolute;
	top: 55%;
	right: 34%;
	width: 150px;
	height: 30px;
	transform: rotate(-50deg);
}

#hong {
	position: absolute;
	top: 72.5%;
	right: 35%;
	width: 160px;
	height: 30px;
	transform: rotate(-50deg);
}

.quote_block {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	font-size: 1.25em;
	line-height: 1.5em;
	width:70%;
	text-align: center;
	color: black;
	font-family: 'Merriweather', serif;
}

.author {
	text-align:right;
}

@media screen and (max-width: 600px) {
	.bb-bookblock {
		height: 100%;
		margin-top:0;
		width:100%;
	}
	.quote_block {
		height:auto;
		position:relative;
		transform:none;
		top:0;
		left:0;
		padding:15px;
		font-size:1em;
		text-align: center;
		margin-left:auto;
		margin-right:auto;
		margin-top:-5px;
		width:80%;
	}
	.LFE {
		width:90%;
		text-align:left;
		text-indent: 15%;

	}
	.author {
		margin-bottom:0;
	}
	body {
		overflow-y: visible;
	}

	#hong,#helen {
		display:none;
	}

	.bb-item {
		position: relative;
		display: block !important;
		height: auto;
		width: 100vw;
		margin-bottom:0;
	}

	#cover-mobile {
		content: url("../images/cover\ 2\ mobile.png")
	}

	nav {
		display: none;
	}
}

